@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020180113"
-#define public MagickPackageReleaseDate "snapshot-20180113"
+#define public MagickPackageVersionAddendum ".020180114"
+#define public MagickPackageReleaseDate "snapshot-20180114"
