@@ -1,3 +1,7 @@
+2018-01-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* coders/gif.c (ReadGIFImage): Fix memory leak of global colormap.
+
 2018-01-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* magick/symbols.h: Fix SourceForge issue #538 "13 symbols in
